feat: add restart target and duplicate-data warning to intro lesson
Add `make restart` (drop-all-data + start) so users can quickly reset
and retry. Add a notice to the Load Data step explaining that re-running
the mutation creates duplicates due to blank node UID assignment.

--- a/content/intro/3.md
+++ b/content/intro/3.md
@@ -15,6 +15,15 @@ loaded successfully.
 
 Don't worry about the syntax for now, it will be explained later.
 
+{{% notice "note" %}}
+**Only run this mutation once.** Blank nodes like `_:michael` are temporary
+labels — Dgraph assigns a new UID for each one every time you run the
+mutation. Running it again will create a second set of nodes (two Michaels,
+two Amits, etc.) rather than updating the existing data. If that happens, run
+`make restart` to reset the database and restart the tour, then
+[click here](/intro/1) to begin this section again.
+{{% /notice %}}
+
 You can load the same example data using JSON format. You're able to do that
 through our [clients](https://docs.dgraph.io/clients/), cURL or [Ratel UI](https://docs.dgraph.io/ratel/).
 
