--- a/content/intro/4.md
+++ b/content/intro/4.md
@@ -10,8 +10,9 @@ endpoint = "/mutate"
 +++
 
 In the last exercise, you added some data into Dgraph. Adding or removing data
-in Dgraph is called a mutation. Dgraph supports two mutation formats: RDF
-(Resource Description Framework) N-Quad and JSON (JavaScript Object Notation).
+in Dgraph is called a mutation. Dgraph supports two mutation formats:
+[RDF (Resource Description Framework) N-Quad](https://www.w3.org/TR/n-quads/)
+and JSON (JavaScript Object Notation).
 
 Every node in Dgraph has a unique identifier called a **UID**, which Dgraph
 generates automatically when you create new data.
