docs: link UID to Dgraph docs and clarify it's a uint64

--- a/content/intro/4.md
+++ b/content/intro/4.md
@@ -14,7 +14,7 @@ in Dgraph is called a mutation. Dgraph supports two mutation formats:
 [RDF (Resource Description Framework) N-Quad](https://www.w3.org/TR/n-quads/)
 and JSON (JavaScript Object Notation).
 
-Every node in Dgraph has a unique identifier called a **UID**, which Dgraph
+Every node in Dgraph has a unique identifier called a **[UID](https://docs.dgraph.io/dql/dql-schema/#uid-type)**, an unsigned 64-bit integer, which Dgraph
 generates automatically when you create new data.
 
 ## Blank UID (New Nodes)
