docs: add docs links and rewrite Load Data lesson copy
Link RDF syntax, JSON, and GraphQL terms to docs.dgraph.io. Rewrite
surrounding prose for clarity and replace expandable JSON block with
a standard code fence.

--- a/content/intro/3.md
+++ b/content/intro/3.md
@@ -9,8 +9,9 @@ courseName = "Introduction"
 endpoint = "/mutate"
 +++
 
-Now that a schema has been loaded, it's time to load some data. Press the
-**run** button again and check that the response panel indicates the data was
+Now that a schema has been loaded, it's time to load some data. 
+
+Press the **run** button again and check that the response panel indicates the data was
 loaded successfully.
 
 Don't worry about the syntax for now, it will be explained later.
@@ -24,12 +25,10 @@ two Amits, etc.) rather than updating the existing data. If that happens, run
 [click here](/intro/1) to begin this section again.
 {{% /notice %}}
 
-You can load the same example data using JSON format. You're able to do that
-through our [clients](https://docs.dgraph.io/clients/), cURL or [Ratel UI](https://docs.dgraph.io/ratel/).
+The [RDF syntax](https://docs.dgraph.io/dql/dql-mutation/#set-block) used on the right is just one of formats that our [clients](https://docs.dgraph.io/clients/), the [Ratel UI](https://docs.dgraph.io/ratel/), and
+REST endpoints support for making queries and applying mutations.  [JSON](https://docs.dgraph.io/dql/dql-mutation/#set-block) and [GraphQL](https://docs.dgraph.io/graphql/) can be used as well.  
 
-See the JSON:
-
-{{% expandable %}}
+For example, the following shows the RDF on the right expressed as JSON:
 
 ```
   {
@@ -151,7 +150,6 @@ See the JSON:
     }
 ```
 
-{{% /expandable %}}
 
-{{% notice "tip" %}} The JSON example may end up helping you better understand the format in
-RDF. {{% /notice %}}
+{{% notice "tip" %}} Comparing JSON example to the RDF may help you better understand the syntax of both. {{% /notice %}}
+
