docs: simplify Graphs lesson and add expandable answer
Replace query code block with plain-English description, add expandable
answer for finding Michael and Rammy, and improve paragraph structure.

--- a/content/intro/5.md
+++ b/content/intro/5.md
@@ -17,32 +17,18 @@ Graphs describe objects and the interconnections among them. Many people have
 heard of friendship graphs, or social network graphs, so let’s start there.
 
 We have loaded [Ratel UI](http://localhost:8000) in an iFrame for this lesson
-and have ran the following query against your endpoint you provided in the
-earlier lesson.
-
-{{% expandable %}}
-
-```
-{
-  michael(func: anyofterms(name, "Michael")) {
-    name
-    owns_pet {
-      name
-    }
-    friend {
-      name
-      friend { expand(_all_) { expand(_all_) } }
-      owns_pet { name }
-    }
-  }
-}
-```
-
-{{% /expandable %}}
+and have had it run a query that finds Michael and traverses his friendships,
+their pets, and their friends' connections.
 
 In the resulting graph, circles denote people and pets, and lines denote
-connections or labeled relationships among them. See if you can find Michael
-and his pet sheep, Rammy.
+connections or labeled relationships among them.
+
+**Can you find Michael and his pet sheep Rammy on the graph?** 
+
+{{% expandable %}}
+<p>Michael is the blue circle in the middle of the graph. Rammy is the pink
+circle directly connected to Michael.</p>
+{{% /expandable %}}
 
 <!---The graph could be represented as a picture, written down as text or stored in a graph database. -->
 
