docs: improve Load Data links and prose in intro lesson 3
Link DQL, RDF data format, mutation, JSON, and GraphQL mutations to
their respective docs.dgraph.io pages. Rewrite surrounding copy for
clarity.

--- a/content/intro/3.md
+++ b/content/intro/3.md
@@ -25,11 +25,13 @@ two Amits, etc.) rather than updating the existing data. If that happens, run
 [click here](/intro/1) to begin this section again.
 {{% /notice %}}
 
-The [RDF syntax](https://docs.dgraph.io/dql/dql-mutation/#set-block) used on the right is just one of formats that our [clients](https://docs.dgraph.io/clients/), the [Ratel UI](https://docs.dgraph.io/ratel/), and
-REST endpoints support for making queries and applying mutations.  [JSON](https://docs.dgraph.io/dql/dql-mutation/#set-block) and [GraphQL](https://docs.dgraph.io/graphql/) can be used as well.  
+The [DQL](https://docs.dgraph.io/dql/) [RDF data format](https://docs.dgraph.io/dql/dql-rdf)
+used for the [mutation](https://docs.dgraph.io/dql/dql-mutation) on the right is just one 
+of the data formats our [clients](https://docs.dgraph.io/clients/), the [Ratel UI](https://docs.dgraph.io/ratel/),
+and API endpoints support when loading and modifying data. [JSON](https://docs.dgraph.io/dql/json-mutation-format) and [GraphQL mutations](https://docs.dgraph.io/graphql/mutations/mutations-overview)
+can be used as well. 
 
-For example, the following shows the RDF on the right expressed as JSON:
-
+The following is same mutation as on the right expressed in JSON format:
 ```
   {
         "set": [
