docs: add transition sentence at end of Load Data lesson

--- a/content/intro/3.md
+++ b/content/intro/3.md
@@ -155,3 +155,4 @@ The following is same mutation as on the right expressed in JSON format:
 
 {{% notice "tip" %}} Comparing JSON example to the RDF may help you better understand the syntax of both. {{% /notice %}}
 
+We'll go into more detail about both next.    
