docs: fix expandable answer and clean up Graphs lesson

--- a/content/intro/5.md
+++ b/content/intro/5.md
@@ -26,8 +26,10 @@ connections or labeled relationships among them.
 **Can you find Michael and his pet sheep Rammy on the graph?** 
 
 {{% expandable %}}
-<p>Michael is the blue circle in the middle of the graph. Rammy is the pink
-circle directly connected to Michael.</p>
+```
+Michael is the blue circle in the middle of the graph.
+Rammy the sheep is the pink circle directly connected to Michael.
+``` 
 {{% /expandable %}}
 
 <!---The graph could be represented as a picture, written down as text or stored in a graph database. -->
@@ -35,8 +37,8 @@ circle directly connected to Michael.</p>
 Graphs lend themselves so naturally to visualization that you’ll find yourself
 thinking in terms of graphs and visualizations of them.
 
-In a graph, the objects (or entities) are called nodes and the relationships are
-called edges or predicates.
+In a graph, the objects (or entities) are called ***nodes*** and the relationships are
+called ***edges*** or ***predicates***.
 
 Graphs aren't just for social networks. Other examples include
 
