--- a/content/basic/1.md
+++ b/content/basic/1.md
@@ -8,12 +8,13 @@ course = 2
 courseName = "Basic"
 +++
 
-{{% notice "note" %}} For the following queries to run, you should have loaded
-data in the [introduction](../../intro/3/). {{% /notice %}}
+{{% notice "note" %}} 
+The examples in this section will not function correctly unless you have [added the schema](/intro/2) and [loaded the example data](/intro/3) in the DQL Introduction. 
+{{% /notice %}}
 
-Let’s have a look at a hello world query in DQL.
+Let’s have a look at a basic query in DQL, like the one on the right. 
 
-Every query has a name, and the result is labeled with the same name.
+Every query has a name, in this case `find_michael`,  and when run, it's result is labeled with the same name.
 
 The search criteria `func: ...` matches nodes. Function `eq` does what you'd
 expect, matching nodes with a `name` equalling "Michael". The result is the
@@ -23,36 +24,46 @@ Dgraph identifies each node with a unique internal id, its UID. A UID is not an
 edge, but can it be returned in a query with `uid`. If you already know a node's
 UID, it can be retrieved with `func: uid(<uid-number>)`.
 
-Something to try : Change the query to select someone else. You can check the
-[sample data](../../intro/4) again.
+Run the query now, and examine the result.
 
-{{% expandable %}} Find a name in the data and try
+Challenge: Modify the query to find Michael by his `uid`.
 
+{{% expandable %}} 
+
+First run the original `find_michael` query and note the `uid` in the response.     
 ```
 {
-  find_someone(func: eq(name, "...name in here...")) {
+  find_michael(func: eq(name, "Michael")) {
+    uid
     name
     age
   }
 }
 ```
 
-Or look at the `UID`s in the data and try
+Then modify the query to use the `uid` function as follows, replacing the ```UID_HERE```
+in the unquoted `uid` value.
+
+The `uid` for Micahel will begin with `0x` and be 18 characters long (`0xfffd8d67d98b46fc` for example) and is unique to your 
+local Dgraph instance. 
 
 ```
+
 {
-  find_someone(func: uid(...uid number here...)) {
+  find_michael(func: uid(UID_HERE)) {
+    uid
     name
     age
   }
 }
 ```
+
+
 
 You can edit the queries and try whatever you like. When there are answers like
 this, cut and paste them into the query panel, then edit and run them.
 {{% /expandable %}}
 
-The tutorial will handle the running of the query for you, so just focus on the
-query text. You can also learn about
-[posting queries](https://docs.dgraph.io/dgraph-overview/) or
-[programming with Dgraph](https://docs.dgraph.io/clients/).
+
+This tutorial handles running of the query for you, so you can just focus on the
+query text.  But if you want to learn more about how it does so, check out [posting queries](https://docs.dgraph.io/dgraph-overview/) or [programming with Dgraph](https://docs.dgraph.io/clients/).
