docs: reword challenge prompt and fix query name in basic/2

--- a/content/basic/2.md
+++ b/content/basic/2.md
@@ -18,14 +18,14 @@ graph, or some manipulation or calculation based on the queried graph.
 
 Let’s improve the query to get Michael and his network of friends.
 
-Something to try : Michael also owns a pet, find it and its `name`. The
-`owns_pet` edge will help here.
+Challenge: Michael also owns a pet, find it and its `name`. A tip: the
+`owns_pet` edge will help doing so. 
 
 {{% expandable %}}
 
 ```
 {
-  michaels_pet(func: eq(name, "Michael")) {
+  michaels_friends_and_pet(func: eq(name, "Michael")) {
     name
     age
     friend {
