docs: rewrite Data types lesson with inline schema and fix typos
Inline the example schema, explain node/value distinction and edge
types with references back to the intro. Fix typos (ahve, connets,
by int of) and clean up formatting.

--- a/content/basic/3.md
+++ b/content/basic/3.md
@@ -10,36 +10,54 @@ courseName = "Basic"
 
 It’s time to talk about data types and nodes.
 
-# Type System
+## Type System
 
-Starting in version 1.1, Dgraph has support for a type system. At the moment,
-the type system is basic but can be used already to categorize nodes and query
+Starting in version 1.1, Dgraph has support for a type system. The type system is used to categorize nodes and query
 them based on their type. The type system is also used during expand queries.
 
-So in order to expand or delete nodes, you need to define your types correctly.
-You can see more about the
-[Schema and Type System here](https://docs.dgraph.io/dql/dql-schema).
+In order to expand or delete nodes, you need to define your types correctly.
 
-# Data types and Schema
+## Data types and Schema
 
 There was some magic in the last query because some of the queried edges
 returned a value (`name` and `age`), but some were edges to other nodes
 (`friend` and `owns_pet`) that themselves had further properties.
 
-The truth is that there is a schema to tell us how to interpret an edge.
+We need to consult the schema to tell us how to interpret any given edge.
 
-The visualization won’t be much use this time. Have a look at the JSON to find
-out about the schema of the example.
+The visualization won't be much use this time. Instead let's consider the schema we [added
+in the intro section](/intro/2):
 
-There are two kinds of nodes in a graph, let’s call them nodes and values (or
-literals). In the example, nodes representing people have a `name` edge to a
-`string` value and an `age` edge to an `int` value. A value can’t have any edges
-coming out of it.
+```
+type Person {
+    name
+    age
+    friend
+    owns_pet
+}
+
+type Animal {
+    name
+}
+
+name: string @index(term) @lang .
+age: int @index(int) .
+friend: [uid] @count .
+owns_pet: [uid] .
+```
+
+There are two kinds of nodes in a graph; ***nodes*** and ***values*** (values are also sometimes called
+***literals***). In our [example schema](/intro/2), nodes representing people have a `name` edge to a
+`string` value, and an `age` edge to an `int` value. They also have a `friend` edge with `uid` type that connects them
+to other nodes.
+
+- Edges are attached to nodes to connect them to values and other nodes.
+- Edges cannot be attached to values.
 
 Here are the types you can use to store values in Dgraph.
 
 | Dgraph Type | Description                                                                                                         |
-| :---------- | :------------------------------------------------------------------------------------------------------------------ |
+| :---------- |:--------------------------------------------------------------------------------------------------------------------|
 | `default`   | default type (It is a neutral type)                                                                                 |
 | `int`       | signed 64 bit integer                                                                                               |
 | `float`     | double precision floating-point number                                                                              |
@@ -48,10 +66,13 @@ Here are the types you can use to store values in Dgraph.
 | `dateTime`  | RFC3339 time format with optional timezone eg: 2006-01-02T15:04:05.999999999+10:00 or 2006-01-02T15:04:05.999999999 |
 | `geo`       | geometries stored using [go-geom](https://github.com/twpayne/go-geom)                                               |
 | `password`  | encrypted value                                                                                                     |
+| `uid`       | a reference to a node                                                                                               |
 
-There's also the `uid` type, for nodes. The schema tells us the `friend` edge
-goes from one node to another, but not to a value.
+Looking at the `friend` definition in the schema, we can tell that `friend` edges, by virtue of using the `uid` type (`friend: [uid] @count .`), are used to
+connect nodes with other nodes — in `Person` type nodes, to connect a person with their friends.
 
-There's lots more about schema [later in the tutorial]({{< relref "schema/1" >}}). For now,
-though, we know more about the structure of our graph and the types of things in
-it.
+The `name` definition, which uses the `string` type (`name: string @index(term) @lang .`), is attached as an edge to both the `Person` and `Animal` node types in order
+to connect a person or an animal node with their name.
+
+We'll cover more about schemas [later in the tutorial]({{< relref "schema/1" >}}), and there's much more to dive into in the [DQL Schema section of the docs](https://docs.dgraph.io/dql/dql-schema).
+For now, though, we know more about the structure of our graph and the types of things in it.
