docs: refine Data types lesson prose and fix missing 'to'

--- a/content/basic/3.md
+++ b/content/basic/3.md
@@ -46,12 +46,12 @@ friend: [uid] @count .
 owns_pet: [uid] .
 ```
 
-There are two kinds of nodes in a graph; ***nodes*** and ***values*** (values are also sometimes called
-***literals***). In our [example schema](/intro/2), nodes representing people have a `name` edge to a
-`string` value, and an `age` edge to an `int` value. They also have a `friend` edge with `uid` type that connects them
-to other nodes.
+There are two kinds of nodes in this schema, let's call them ***nodes*** and ***values*** (values are also sometimes called
+***literals***). Nodes representing people `type Person` have a `name` edge to a
+`string` value, and an `age` edge to an `int` value. They also have a `friend` edge with a `uid` type in order to connect them
+with other people. 
 
-- Edges are attached to nodes to connect them to values and other nodes.
+- Edges are attached to nodes to connect them to both values and other nodes.
 - Edges cannot be attached to values.
 
 Here are the types you can use to store values in Dgraph.
@@ -69,10 +69,10 @@ Here are the types you can use to store values in Dgraph.
 | `uid`       | a reference to a node                                                                                               |
 
 Looking at the `friend` definition in the schema, we can tell that `friend` edges, by virtue of using the `uid` type (`friend: [uid] @count .`), are used to
-connect nodes with other nodes — in `Person` type nodes, to connect a person with their friends.
+connect nodes with other nodes - to connect a person with their friends.
 
-The `name` definition, which uses the `string` type (`name: string @index(term) @lang .`), is attached as an edge to both the `Person` and `Animal` node types in order
-to connect a person or an animal node with their name.
+The `name` definition, which uses the `string` type (`name: string @index(term) @lang .`), is attached as an edge to both the `Person` and `Animal` types 
+to connect their nodes with their names. 
 
 We'll cover more about schemas [later in the tutorial]({{< relref "schema/1" >}}), and there's much more to dive into in the [DQL Schema section of the docs](https://docs.dgraph.io/dql/dql-schema).
 For now, though, we know more about the structure of our graph and the types of things in it.
