docs: rewrite filtering lesson with links to search and schema sections
Restructure filter function list, link to search and schema tutorial
sections, and fix typo (dges -> edges).

--- a/content/basic/6.md
+++ b/content/basic/6.md
@@ -16,7 +16,7 @@ filters can be applied to any node in the query.
 Note the syntax difference between filtering at the root of a query and
 filtering on internal blocks.
 
-There are many functions for filtering, some of them are
+There are many functions for filtering, for example:
 
 - `allofterms(edge_name, "term1 ... termN")`: matches nodes with an outgoing
   `string` edge `edge_name` where the string contains all listed terms.
@@ -24,18 +24,15 @@ There are many functions for filtering, some of them are
 - `anyofterms(edge_name, "term1 ... termN")`: As with `allofterms`, but matches
   at least one term.
 
-- The equalities and inequalities can be applied to edges of types: `int`,
-  `float`, `string` and `date`
-
+Comparison functions that can be applied to edges of types: `int`,
+  `float`, `string` and `date`:
   - `eq(edge_name, value)`: equal to
   - `ge(edge_name, value)`: greater than or equal to
   - `le(edge_name, value)`: less than or equal to
   - `gt(edge_name, value)`: greater than
   - `lt(edge_name, value)`: less than
 
-- There's also regular expressions, full text search and geo search, but those
-  are bigger topics that'll have their own section in the tutorial
+There's also regular expressions, full text search and geo search, but those are bigger topics that we'll cover later in [the search section of the tutorial]({{< relref "search/1" >}})
 
-Functions can only be applied to predicates that have been indexed except the
-case when comparison functions (`eq`, `ge`, `gt`, `le`, `lt`) are used in
-filter - that’s part of the [lesson about schema]({{< relref "schema/1" >}}).
+
+Functions can only be applied to predicates that have been indexed, with the exception of using comparison functions (`eq`, `ge`, `gt`, `le`, `lt`) in filter. We'll cover more about this later in the [schema lesson]({{< relref "schema/1" >}}).
