docs: expand @filter explanation and fix grammar in basic/6

--- a/content/basic/6.md
+++ b/content/basic/6.md
@@ -32,7 +32,10 @@ Comparison functions that can be applied to edges of types: `int`,
   - `gt(edge_name, value)`: greater than
   - `lt(edge_name, value)`: less than
 
-There's also regular expressions, full text search and geo search, but those are bigger topics that we'll cover later in [the search section of the tutorial]({{< relref "search/1" >}})
+There are also regular expressions, full text search, and geo search, but those are bigger topics that we'll cover later in [the search section of the tutorial]({{< relref "search/1" >}}).
 
 
-Functions can only be applied to predicates that have been indexed, with the exception of using comparison functions (`eq`, `ge`, `gt`, `le`, `lt`) in filter. We'll cover more about this later in the [schema lesson]({{< relref "schema/1" >}}).
+Except for comparison functions 
+(`eq`, `ge`, `gt`, `le`, `lt`) used in filter, functions can only be applied to predicates that have been indexed.
+
+We'll cover indexes in detail later in the [schema lesson]({{< relref "schema/1" >}}).
