docs: apply Strunk style edits to basic/6 and basic/11
Rewrite prose for active voice, positive form, and concision.
Add docs.dgraph.io links for regex, full-text, and geo functions.
Clarify indexing rules for comparison functions in @filter vs root.

--- a/content/basic/11.md
+++ b/content/basic/11.md
@@ -10,31 +10,29 @@ courseName = "Basic"
 
 +++
 
-Given what you've seen so far, you've probably already understood this, but it's
-worth going over.
+Every query begins at a root node.
 
-The graphs in Dgraph can be huge, so starting searching from all nodes isn't
-efficient. Dgraph needs a place to start searching, that's the root node.
+Dgraph graphs can contain millions of nodes, so each query must start from a
+narrow entry point. The `func:` keyword and a search function select that
+initial set of root nodes.
 
-At root, we use `func:` and a function to find an initial set of nodes. So far
-we've used `eq` and `allofterms` for string search, but we can also search on
-other values like dates, numbers, and also filters on `count`.
+The examples so far have used `eq` and `allofterms` for string search, but
+`func:` also supports dates, numbers, and filters on `count`.
 
-Dgraph needs to build an index on values that are to be searched in this way
-because, without an index to make the search efficient, Dgraph would have to
-trawl through the whole database to find matching values.
+Dgraph requires an index on any value searched this way. An index lets Dgraph
+jump straight to matching values instead of scanning the entire database.
 
-From the set of nodes matched in the root filter, Dgraph then follows edges to
-satisfy the remainder of the query. The filters on blocks inside the root are
-only applied to the nodes reached by following listed edges to them.
+From the root set, Dgraph follows edges to satisfy the rest of the query.
+Filters inside nested blocks apply only to nodes reached by following those
+edges, never to the root set itself.
 
-The root `func:` only accepts a single function and doesn't accept `AND`, `OR`
-and `NOT` connectives as in filters. So the syntax
-`query_name(func: foo(...)) @filter(... AND ...) {...}` is required when further
-filtering on the elements returned by the root function is required.
+The root `func:` accepts a single function. To combine conditions, add an
+`@filter` with `AND`, `OR`, or `NOT` connectives using the syntax
+`query_name(func: foo(...)) @filter(... AND ...) {...}`.
 
-Something to try: Find all people who are in their 20s, and have at least 2
-friends. {{% expandable %}}
+Try this: find all people in their 20s who have at least 2 friends. 
+
+{{% expandable %}}
 
 ```
 {
