--- a/content/basic/6.md
+++ b/content/basic/6.md
@@ -8,34 +8,29 @@ course = 2
 courseName = "Basic"
 +++
 
-Nodes are filtered based on functions applied to the node's outgoing edges.
+Functions filter nodes by examining their outgoing edges.
 
-So far the queries have only applied a filter to the top level nodes, but
-filters can be applied to any node in the query.
+The previous queries applied filters only at the root level. 
+Filters can also appear on any internal block in the query. 
+The syntax differs slightly between root-level and query internal filtering. Compare the syntax difference between the root 
+filter function (`func:`) in the query on the right the and the internal filter function applied with the `@filter` directive inside it. 
 
-Note the syntax difference between filtering at the root of a query and
-filtering on internal blocks.
+Dgraph offers a variety of filtering functions, for example: 
 
-There are many functions for filtering, for example:
+- `allofterms(edge_name, "term1 ... termN")`: matches nodes whose outgoing `string` edge `edge_name` contains all listed terms.
+  
+- `anyofterms(edge_name, "term1 ... termN")`: matches nodes whose outgoing `string` edge `edge_name` contains at least one listed term.
 
-- `allofterms(edge_name, "term1 ... termN")`: matches nodes with an outgoing
-  `string` edge `edge_name` where the string contains all listed terms.
-
-- `anyofterms(edge_name, "term1 ... termN")`: As with `allofterms`, but matches
-  at least one term.
-
-Comparison functions that can be applied to edges of types: `int`,
-  `float`, `string` and `date`:
+- Comparison functions, which apply to edges of types `int`, `float`, `string`, and `date`:
   - `eq(edge_name, value)`: equal to
   - `ge(edge_name, value)`: greater than or equal to
   - `le(edge_name, value)`: less than or equal to
   - `gt(edge_name, value)`: greater than
   - `lt(edge_name, value)`: less than
 
-There are also regular expressions, full text search, and geo search, but those are bigger topics that we'll cover later in [the search section of the tutorial]({{< relref "search/1" >}}).
 
+As well, functions such things as filtering using [regular expressions](https://docs.dgraph.io/dql/query/functions#regular-expressions), [full-text search](https://docs.dgraph.io/dql/query/functions#full-text-search), and [geospatial queries](https://docs.dgraph.io/dql/query/functions#geolocation). The [search section of this tutorial]({{< relref "search/1" >}}) covers these in depth.
 
-Except for comparison functions 
-(`eq`, `ge`, `gt`, `le`, `lt`) used in filter, functions can only be applied to predicates that have been indexed.
+Most functions require an indexed predicate. Comparison functions (`eq`, `ge`, `gt`, `le`, `lt`) are the exception: they work inside `@filter` without an index, but still require one at root `func:`. Filtering on unindexed predicates can be slow for large datasets.
 
-We'll cover indexes in detail later in the [schema lesson]({{< relref "schema/1" >}}).
+The [schema lesson]({{< relref "schema/1" >}}) covers indexes in detail.
