docs: copyedit basic/3 and basic/7-17 for clarity and concision
Apply Strunk style rules across all Basic section lessons:
- Active voice, positive form, and parallel construction throughout
- Expand terse one-line lessons (7, 8, 10, 12, 13) with concrete
  explanations referencing the associated example queries
- Fix broken sentence in 12.md and add link to alias lesson
- Add docs.dgraph.io links for facets in 17.md
- Rewrite Data types lesson (3.md) to eliminate throat-clearing,
  fix comma splice, and tighten schema explanations

--- a/content/basic/10.md
+++ b/content/basic/10.md
@@ -9,4 +9,8 @@ courseName = "Basic"
 
 +++
 
-The number of outgoing edges can be counted, using the `count` function.
+The `count` function returns the number of outgoing edges of a given name. In the example, `count(friend)` counts how many friends Michael has.
+
+`count` can also appear at root inside `func:` to select nodes by edge count -- for example, `func: ge(count(friend), 2)` finds every node with at least two friends. 
+
+Using `count` at root requires a `@count` index on the predicate.
