--- a/content/basic/12.md
+++ b/content/basic/12.md
@@ -10,5 +10,9 @@ courseName = "Basic"
 
 +++
 
-The function `has(edge_name)` returns nodes that have an outgoing edge of the
-given name.
+The function `has(edge_name)` tests whether a node possesses at least one outgoing edge of the given name. In the example, `has(friend)` at root finds every node that has at least one `friend` edge, regardless of whom the edge points to.
+
+`has()` does not require an index. 
+
+The example query also aliases `count(friend)` as `number_of_friends` — run it and notice how the alias appears as the field name in the JSON response. The [next lesson]({{< relref "basic/13" >}}) covers aliases in detail.
+
