--- a/content/basic/13.md
+++ b/content/basic/13.md
@@ -10,4 +10,9 @@ courseName = "Basic"
 
 +++
 
-The output graph can set names for edges in the output with aliasing.
+Aliases rename edges and functions in the JSON output. Place the alias before a colon, followed by the edge or function it renames: `persons_name : name`.
+
+In the example, `persons_name : name` renames the `name` edge to `persons_name` in the response,
+and `number_of_friends : count(friend)` gives the count result a readable label. 
+
+Aliases affect only the output — they do not change the stored data or the query logic.
