--- a/content/basic/15.md
+++ b/content/basic/15.md
@@ -10,12 +10,12 @@ courseName = "Basic"
 
 The `@normalize` directive
 
-- returns only edges listed with an alias, and
+- returns only aliased edges, and
 
-- flattens the result to remove nesting
+- flattens the result into a single level
 
 
-By adding the directive the example query returns only the aliased fields:
+With `@normalize`, the example query returns only the aliased fields:
 ```
 "michael_and_pet_name": [
   {
@@ -24,7 +24,7 @@ By adding the directive the example query returns only the aliased fields:
   }
 ]
 ```
-Without it, the result would include unaliased fields like `age`, and has `pet` nested under `owns_pet`:
+Without `@normalize`, the result includes unaliased fields like `age` and nests `pet` under `owns_pet`:
 ```
 "michael_and_pet_name": [
   {
