--- a/content/basic/17.md
+++ b/content/basic/17.md
@@ -8,31 +8,32 @@ course = 2
 courseName = "Basic"
 +++
 
-Dgraph supports facets — key value pairs on edges — as an extension to RDF
-triples. Facets describe *aspects* of a relationship by adding properties to
-*edges*, instead of *nodes*. They can also be used as weights for edges.
+Dgraph supports facets — key-value pairs attached to edges. Facets store
+metadata such as timestamps, booleans, and numeric values on *edges*, not
+*nodes*. A `rating` facet on a `rated` edge, for example, serves as an edge
+weight.
 
-For example, a `friend` edge can carry a boolean `close` facet to mark close
-friendships.
+A `friend` edge, for example, can carry a boolean `close` facet that marks
+whether two people share a strong bond.
 
-More details about facets are in the docs: https://docs.dgraph.io/dql/query/facets
+For more detail, see the [facets documentation](https://docs.dgraph.io/dql/query/facets).
 
-We first need to seed our dataset with facet information so the example query returns data.
+The sample dataset omits facets. Seed the facet data before running the example query.
 
 ### Seed sample facet data
 
-In a terminal, navigate to the root directory where you checked out this tour and run:
+From the tour's root directory, run:
 
 ```
 make seed-basic-facets
 ```
 
-On Windows (or if you don't have `make` installed), use Docker instead:
+If `make` is unavailable, use Docker instead:
 
 ```
 docker exec tour-seed make seed-basic-facets
 ```
-It will output the following:
+The command outputs:
 
 ```
 === Seeding Facet Sample Data ===
@@ -96,14 +97,14 @@ Facets sample data seeded successfully.
 
 ### Run the sample query 
 
-Run the example query now to view the facets the mutation set on the edges of the "Alice" node. 
+Run the example query to view the facets on Alice's edges.
 
 ### Adding multiple attributes to a single node
 
-Sometimes you need two edges with distinct predicates pointing to the same node.
-This pattern can be used to "explain the relationship" of nodes.
+Multiple predicates can point to the same target node; each predicate carries
+its own facets.
 
-For a target node with UID `0x0f43`, set up the RDF like this:
+For a target node with UID `0x0f43`, structure the RDF triples like this:
 
 ```
 _:MyNode <predicate1> <0x0f43> ( foo=bar, and=1 ) .
@@ -111,7 +112,7 @@ _:MyNode <predicate2> <0x0f43> ( bar=bar, and=2 ) .
 _:MyNode <predicate3> <0x0f43> ( bar=bar, and=3 ) .
 ```
 
-More examples:
+The same pattern works with richer facets:
 
 ```
 _:MyNode <Morning> <0x0f43> ( foo=true, and=1 , since=2006-02-02T13:01:09 ) .
@@ -119,6 +120,5 @@ _:MyNode <Evening> <0x0f43> ( bar=false, and=2, since=2006-02-02T13:01:09 ) .
 _:MyNode <Night>   <0x22>   ( bar=true, and=3,  since=2006-02-02T13:01:09 ) .
 ```
 
-If you repeat the same predicate instead of distinct ones, each new line
-overwrites the previous edge attribute. Use distinct predicates to preserve
-each set of facet values.
+Repeating the same predicate overwrites the previous facets. Use distinct
+predicates to preserve each set of facet values.
