--- a/content/basic/7.md
+++ b/content/basic/7.md
@@ -8,5 +8,8 @@ course = 2
 courseName = "Basic"
 +++
 
-The logical connectives `AND`, `OR` and `NOT` combine multiple functions in a
-filter.
+The logical connectives `AND`, `OR`, and `NOT` combine multiple functions inside `@filter()`.
+
+The example query finds Michael, then filters his friends to those whose age falls between 27 and 48 inclusive. `AND` requires both conditions to hold: `ge(age, 27) AND le(age, 48)` keeps only friends who satisfy both bounds. `OR` selects nodes that match either condition. `NOT` excludes nodes that match its condition.
+
+Try changing `AND` to `OR`, or wrap one of the conditions in `NOT`, and run the query again to see how the results change.
