--- a/content/basic/8.md
+++ b/content/basic/8.md
@@ -8,7 +8,6 @@ course = 2
 courseName = "Basic"
 +++
 
-Results can be ordered using `orderasc` and `orderdesc`.
+Sort results with `orderasc` and `orderdesc`. Place either keyword as a parenthetical parameter on an edge, followed by the predicate to sort on -- for example, `friend (orderasc: age)`.
 
-The visualization will look the same as without the sorting, but the JSON result
-is ordered.
+The example query finds Michael's friends and returns them sorted by age in ascending order. You can sort on any scalar predicate: `int`, `float`, `string`, or `date`. The graph visualization renders the same layout regardless of sort order, but the JSON response lists nodes in the sorted sequence.
