--- a/content/basic/9.md
+++ b/content/basic/9.md
@@ -8,20 +8,19 @@ course = 2
 courseName = "Basic"
 +++
 
-It's not uncommon to have thousands of results for a query.
+Queries often return thousands of results. To select the top-k answers,
+paginate for display, or cap a large result set, use `first`, `offset`, and
+`after` together with ordering.
 
-But you might want to select only the top-k answers, paginate the results for
-display, or limit a large result.
+- `first: N` Return the first `N` results
+- `offset: N` Skip `N` results
+- `after: uid` Return results that follow `uid`
 
-In DQL this is done with `first`, `offset` and `after` in combination with
-ordering.
+The example query sorts Michael's friends alphabetically by name, skips the
+first friend (`offset: 1`), and returns the next two (`first: 2`).
 
-- `first: N` Return only the first `N` results
-- `offset: N` Skip the first `N` results
-- `after: uid` Return the results after `uid`
+By default, Dgraph orders results by `uid`. You can override this by
+[specifying an order]({{< relref "basic/8" >}}).
 
-By default, query answers are ordered by `uid`. You can change this behavior by
-explicitly [specifying an order]({{< relref "basic/8" >}}).
-
-`after` makes sense in pagination when we only know the last `uid` returned and
-don't record how many results have previously been retrieved.
+Use `after` when you know only the last `uid` returned and have not tracked how
+many results you have already retrieved.
