--- a/content/basic/14.md
+++ b/content/basic/14.md
@@ -8,13 +8,11 @@ course = 2
 courseName = "Basic"
 +++
 
-The `@cascade` directive removes any nodes that don't have all matching edges in
-the query.
+The `@cascade` directive keeps only nodes that have every edge requested in the
+query. It also drops nodes whose nested filter matches nothing.
 
-Another use is to remove nodes where a filter inside a block returns no results.
-
-In the query below, Dgraph returns all Michael's friends, whether or not they
-own a pet.
+The first query below returns all of Michael's friends, whether or not they own
+a pet.
 
 ```
 {
@@ -29,8 +27,7 @@ own a pet.
 }
 ```
 
-With the `@cascade` directive, friends of Michael that don't own a pet are not
-included in the result.
+With `@cascade`, the result includes only friends who own a pet.
 
 ```
 {
@@ -45,5 +42,4 @@ included in the result.
 }
 ```
 
-You can read more about `@cascade` directive in our documentation site:
-https://docs.dgraph.io/dql/query/directive/cascade-directive
+For details, see the [`@cascade` directive documentation](https://docs.dgraph.io/dql/query/directive/cascade-directive).
