--- a/content/basic/16.md
+++ b/content/basic/16.md
@@ -8,10 +8,9 @@ course = 2
 courseName = "Basic"
 +++
 
-Queries can contain comments.
+Queries can contain comments. The `#` character marks the rest of a line as a
+comment, which Dgraph ignores during query processing.
 
-Anything after `#` on a line is a comment and ignored for query processing.
-
-This is helpful for debugging queries and for tutorials that need to explain
-parts of queries in-line, which is what we'll do for the more complex queries
-you'll encounter later in the tutorial.
+The example query shows both forms: a comment on its own line and a comment
+inline after a field. Later lessons use inline comments to explain more complex
+queries.
