--- a/content/basic/3.md
+++ b/content/basic/3.md
@@ -8,24 +8,21 @@ course = 2
 courseName = "Basic"
 +++
 
-It’s time to talk about data types and nodes.
+Every node in Dgraph belongs to a type, and every edge carries a data type.
 
 ## Type System
 
-Starting in version 1.1, Dgraph has support for a type system. The type system is used to categorize nodes and query
-them based on their type. The type system is also used during expand queries.
+Dgraph's type system categorizes nodes and lets you query them by type. Expand queries also rely on types to determine which edges to return.
 
-In order to expand or delete nodes, you need to define your types correctly.
+To expand or delete nodes correctly, define their types in the schema.
 
 ## Data types and Schema
 
-There was some magic in the last query because some of the queried edges
-returned a value (`name` and `age`), but some were edges to other nodes
-(`friend` and `owns_pet`) that themselves had further properties.
+In the last query, some edges returned values (`name` and `age`), while others pointed to further nodes (`friend` and `owns_pet`).
 
-We need to consult the schema to tell us how to interpret any given edge.
+The schema defines what each edge means and what type of data it holds.
 
-The visualization won't be much use this time. Instead let's consider the schema we [added
+Run the schema query below, then compare the result with the schema we [added
 in the intro section](/intro/2):
 
 ```
@@ -46,15 +43,14 @@ friend: [uid] @count .
 owns_pet: [uid] .
 ```
 
-There are two kinds of nodes in this schema, let's call them ***nodes*** and ***values*** (values are also sometimes called
-***literals***). Nodes representing people `type Person` have a `name` edge to a
-`string` value, and an `age` edge to an `int` value. They also have a `friend` edge with a `uid` type in order to connect them
-with other people. 
+This schema distinguishes two kinds of targets: ***nodes*** and ***values*** (also called ***literals***).
+
+A `type Person` node has a `name` edge pointing to a `string` value and an `age` edge pointing to an `int` value. Its `friend` edge uses the `uid` type, connecting it to other person nodes.
 
 - Edges are attached to nodes to connect them to both values and other nodes.
 - Edges cannot be attached to values.
 
-Here are the types you can use to store values in Dgraph.
+Dgraph supports the following value types.
 
 | Dgraph Type | Description                                                                                                         |
 | :---------- |:--------------------------------------------------------------------------------------------------------------------|
@@ -68,11 +64,8 @@ Here are the types you can use to store values in Dgraph.
 | `password`  | encrypted value                                                                                                     |
 | `uid`       | a reference to a node                                                                                               |
 
-Looking at the `friend` definition in the schema, we can tell that `friend` edges, by virtue of using the `uid` type (`friend: [uid] @count .`), are used to
-connect nodes with other nodes - to connect a person with their friends.
+The `friend` edge uses the `uid` type (`friend: [uid] @count .`), so it connects one person node to another.
 
-The `name` definition, which uses the `string` type (`name: string @index(term) @lang .`), is attached as an edge to both the `Person` and `Animal` types 
-to connect their nodes with their names. 
+The `name` edge uses the `string` type (`name: string @index(term) @lang .`) and appears on both `type Person` and `type Animal`, giving each node a human-readable label.
 
-We'll cover more about schemas [later in the tutorial]({{< relref "schema/1" >}}), and there's much more to dive into in the [DQL Schema section of the docs](https://docs.dgraph.io/dql/dql-schema).
-For now, though, we know more about the structure of our graph and the types of things in it.
+The [Schema section of this tutorial]({{< relref "schema/1" >}}) and the [DQL Schema docs](https://docs.dgraph.io/dql/dql-schema) cover schemas in full detail.
